// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentRow shows a Comment when itemType is comment 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <Comment
      comment={
        {
          "post": {
            "id": 2,
          },
        }
      }
      displayPostTitle={true}
      onPress={[Function]}
    />
  </View>
</TouchableOpacity>
`;

exports[`ContentRow shows a PostCard when itemType is post 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <PostCard
      onPress={[Function]}
      post={
        {
          "id": 2,
        }
      }
      respondToEvent={[Function]}
      showGroups={true}
    />
  </View>
</TouchableOpacity>
`;

exports[`StreamTab matches the last snapshot 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <Text>
    Posts
  </Text>
</TouchableOpacity>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<SafeAreaProvider>
  <TRenderEngineProvider
    baseStyle={
      {
        "fontSize": 14,
      }
    }
    classesStyles={{}}
    customHTMLElementModels={{}}
    emSize={14}
    enableCSSInlineProcessing={true}
    enableUserAgentStyles={true}
    fallbackFonts={
      {
        "monospace": "Menlo",
        "sans-serif": "system",
        "serif": "Times New Roman",
      }
    }
    htmlParserOptions={
      {
        "decodeEntities": true,
      }
    }
    ignoredDomTags={[]}
    ignoredStyles={[]}
    systemFonts={
      [
        "San Francisco",
        "Arial",
        "ArialHebrew",
        "Avenir",
        "Baskerville",
        "Bodoni 72",
        "Bradley Hand",
        "Chalkboard SE",
        "Cochin",
        "Copperplate",
        "Courier",
        "Courier New",
        "Damascus",
        "Didot",
        "Futura",
        "Geeza Pro",
        "Georgia",
        "Gill Sans",
        "Helvetica",
        "Helvetica Neue",
        "Hiragino Sans",
        "Hoefler Text",
        "Iowan Old Style",
        "Kailasa",
        "Khmer Sangam MN",
        "Marker Felt",
        "Menlo",
        "Mishafi",
        "Noteworthy",
        "Optima",
        "Palatino",
        "Papyrus",
        "Savoye LET",
        "Symbol",
        "Thonburi",
        "Times New Roman",
        "Trebuchet MS",
        "Verdana",
        "Zapf Dingbats",
        "Zapfino",
      ]
    }
    tagsStyles={{}}
  >
    <Provider
      store={
        {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <HyloHTMLConfigProvider>
        <ForwardRef(NavigationContainerInner)>
          <MemberStream
            choice="Comments"
            fetchMoreItems={[Function]}
            header={
              <Text>
                header
              </Text>
            }
            itemType="Comment"
            items={
              [
                {
                  "id": 1,
                },
                {
                  "id": 2,
                },
                {
                  "id": 3,
                },
              ]
            }
            pending={true}
            setChoice={[Function]}
          />
        </ForwardRef(NavigationContainerInner)>
      </HyloHTMLConfigProvider>
    </Provider>
  </TRenderEngineProvider>
</SafeAreaProvider>
`;
